--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <div>
         1) был создан проект с использованием django-admin <br>
         2) далее был настроен джанго в файлах settings и связан с приложением django <br>
@@ -14,5 +9,4 @@
         5) github был подключен к vercel и пракетически автоматически задеплоен
     </div>
 
-</body>
-</html>
+{% endblock %}
