--- a/portf/template/index.html
+++ b/portf/template/index.html
@@ -1,10 +1,9 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐸Суворов Роман🐸</title>
     <!--<link rel="icon" type="image/png" href="/static/img/logo.png">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">-->
@@ -13,12 +12,11 @@
 <body>
     <div>
         1) был создан проект с использованием django-admin <br>
-        2) далее был настроен джанго в файлах settings и связан с приложением django <br>
-        3) проект был связан с репозиторием github для более удобного комита  <br>
-        4) далее был создан файл vercel.json для связи сайта с vercel
-        5) github был подключен к vercel и пракетически автоматически задеплоен
+        2) далее был настроен Django в файлах settings и связан с приложением Django <br>
+        3) проект был связан с репозиторием GitHub для более удобного коммита  <br>
+        4) далее был создан файл vercel.json для связи сайта с Vercel
+        5) GitHub был подключен к Vercel и практически автоматически задеплоен
     </div>
 </body>
 </html>
-
 
