--- a/portf/template/index.html
+++ b/portf/template/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐸Суворов Роман🐸</title>
-    <!--<link rel="icon" type="image/png" href="/static/img/logo.png">
+    <!-- Загрузка статических файлов 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-</head>
+    <!-- Bootstrap CSS -->
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    -->
+    </head>
 <body>
     <div>
         1) был создан проект с использованием django-admin <br>
@@ -19,4 +21,5 @@
     </div>
 </body>
 </html>
+
 
