--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐸Суворов Роман🐸</title>
+    <!-- Загрузка статических файлов -->
+    {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    
-    </head>
+</head>
 <body>
     <div>
         1) был создан проект с использованием django-admin <br>
@@ -18,5 +21,3 @@
     </div>
 </body>
 </html>
-
-
