--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@ p {
   body {
       width: 100%;
       height: 100vh;
-      background: white;
+      background: rgb(81, 220, 65);
       background-image: url('../img/background1.jpg');
       background-position: center;
       background-repeat: no-repeat;
