--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -32,6 +32,9 @@
                         <div class="projects">
                             <a href="https://replit.com/@tot-kogho-siest/" class="project-link">Суворов Роман</a>
                         </div>
+                        {% if intest %}
+                            {{intest}}
+                        {% endif %}
                     </div>
                 </div>
             </div>
