--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -1,43 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🐸Суворов Роман🐸</title>
-    <!-- Загрузка статических файлов -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-</head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="card box-shadow m-2 from-w">
-                    <div class="card-header text-center">
-                        <h1> Суворов Роман </h1>
-                        <p>Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс</p>
-                        <div class="">
-                            1) был создан проект с использованием django-admin <br>
-                            2) далее был настроен Django в файлах settings и связан с приложением Django <br>
-                            3) проект был связан с репозиторием GitHub для более удобного коммита  <br>
-                            4) далее был создан файл vercel.json для связи сайта с Vercel
-                            5) GitHub был подключен к Vercel и практически автоматически задеплоен<br><br>
+{% extends 'base.html' %}
 
-                            <p>Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах</p>
-                        </div>
-        
-                        <h3>Ссылка на профили replit с выполненными работами:</h3>
-                        <div class="projects">
-                            <a href="https://replit.com/@tot-kogho-siest/" class="project-link">Суворов Роман</a>
-                        </div>
-                        {% if intest %}
-                            {{intest}}
-                        {% endif %}
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="card box-shadow m-2 from-w">
+                <div class="card-header text-center">
+                    <h1> Суворов Роман </h1>
+                    <p>Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс</p>
+                    <div class="">
+                        1) был создан проект с использованием django-admin <br>
+                        2) далее был настроен Django в файлах settings и связан с приложением Django <br>
+                        3) проект был связан с репозиторием GitHub для более удобного коммита  <br>
+                        4) далее был создан файл vercel.json для связи сайта с Vercel
+                        5) GitHub был подключен к Vercel и практически автоматически задеплоен<br><br>
+
+                        <p>Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах</p>
                     </div>
+
+                    <h3>Ссылка на профили replit с выполненными работами:</h3>
+                    <div class="projects">
+                        <button class="btn btn-primary" href="https://replit.com/@tot-kogho-siest/" class="project-link">Лабораторные Работы</a>
+                    </div>
+                    {% if intest %}
+                        {{intest}}
+                    {% endif %}
                 </div>
             </div>
         </div>
-    </body>
-</html>
+    </div>
+{% endblock %}
