--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -11,7 +11,7 @@
                         1) был создан проект с использованием django-admin <br>
                         2) далее был настроен Django в файлах settings и связан с приложением Django <br>
                         3) проект был связан с репозиторием GitHub для более удобного коммита  <br>
-                        4) далее был создан файл vercel.json для связи сайта с Vercel
+                        4) далее был создан файл vercel.json для связи сайта с Vercel <br>
                         5) GitHub был подключен к Vercel и практически автоматически задеплоен<br><br>
 
                         <p>Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах</p>
