--- a/portf/templates/stack.html
+++ b/portf/templates/stack.html
@@ -1,10 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="works-container">
-        <div class="works-item">
-            <h3>Лабораторная 1</h3>
-            <p>https://replit.com/@tot-kogho-siest/Progh4-lab1</p>
+    <div class="container">
+        <div class="row">
+            <div class="card box-shadow m-2 from-w">
+                <div class="card-header text-center">
+                    <div class="works-container">
+                        <div class="works-item">
+                            <h3>Лабораторная 1</h3>
+                            <p>https://replit.com/@tot-kogho-siest/Progh4-lab1</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
