--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,8 +73,14 @@ p {
 
 .works-item {
   width: calc(33.33% - 10px); 
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
   box-sizing: border-box; 
+  background-color: rgb(152, 201, 146); 
+  padding: 20px; 
+}
+
+.works-item img {
+  max-width: 100%; 
 }
   
   
