--- a/portf/templates/stack.html
+++ b/portf/templates/stack.html
@@ -6,10 +6,9 @@
             <div class="card box-shadow m-2 from-w">
                 <div class="card-header text-center">
                     <div class="works-container">
-                        <div class="works-item">
+                        <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
                             <h3>Лабораторная 1</h3>
-                            <p>https://replit.com/@tot-kogho-siest/Progh4-lab1</p>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
