--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,11 +72,18 @@ p {
 }
 
 .works-item {
-  width: calc(33.33% - 10px); 
+  width: calc(33.33% - 10px);
   margin-bottom: 20px;
-  box-sizing: border-box; 
-  background-color: rgb(152, 201, 146); 
-  padding: 20px; 
+  box-sizing: border-box;
+  background-color: rgb(200, 231, 193);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center; 
+  text-decoration: none; 
+  display: flex; 
+  align-items: center;
+  justify-content: center;
 }
 
 .works-item img {
