--- a/portf/templates/stack.html
+++ b/portf/templates/stack.html
@@ -7,7 +7,19 @@
                 <div class="card-header text-center">
                     <div class="works-container">
                         <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                            <h3>Лабораторная 1</h3>
+                            <h5>ЛР 1</h5>
+                        </a>
+                    </div>
+
+                    <div class="works-container">
+                        <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
+                            <h5>ЛР 1</h5>
+                        </a>
+                    </div>
+
+                    <div class="works-container">
+                        <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
+                            <h5>ЛР 1</h5>
                         </a>
                     </div>
                 </div>
