--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -19,7 +19,7 @@
 
                     <h3>Ссылка на профили replit с выполненными работами:</h3>
                     <div class="projects">
-                        <button class="btn btn-primary" href="https://replit.com/@tot-kogho-siest/" class="project-link">Лабораторные Работы</a>
+                        <button class="btn btn-primary" href="/prog" class="project-link">ПРОГ4</a>
                     </div>
                     {% if intest %}
                         {{intest}}
