--- a/portf/templates/stack.html
+++ b/portf/templates/stack.html
@@ -4,7 +4,13 @@
     <div class="container">
         <div class="row">
             <div class="card box-shadow m-2 from-w">
+                <a href="/">
+                    <button class="btn btn-primary">Назад</button>
+                </a>
                 <div class="card-header text-center">
+                    <h3> ПРОГ4 </h3>
+                </div>
+
                     <div class="works-container">
                         <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
                             <h5>ЛР 1</h5>
@@ -19,7 +25,6 @@
                             <h5>ЛР 1</h5>
                         </a>
 
-                    </div>
                 </div>
             </div>
         </div>
