--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -18,9 +18,9 @@
                     </div>
 
                     <h3>Ссылка на профили replit с выполненными работами:</h3>
-                    <div class="projects">
-                        <button class="btn btn-primary" href="/prog" class="project-link">ПРОГ4</a>
-                    </div>
+                        <a href="/prog">
+                            <button class="btn btn-primary">ПРОГ4</button>
+                        </a>
                     {% if intest %}
                         {{intest}}
                     {% endif %}
