--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,9 +85,14 @@ p {
   display: flex; 
   align-items: center;
   justify-content: center;
-  overflow: hidden; 
+  overflow: hidden;
+  
 }
 
+.works-item:hover{
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
+  transform: translateY(-3px);
+}
 .works-item img {
   max-width: 100%; 
 }
