--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -4,15 +4,14 @@ p {
   }
   
   body {
-      width: 100%;
-      height: 100vh;
-      background: rgb(81, 220, 65);
-      background-image: url('../img/background1.jpg');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      position: relative;
-
+    width: 100%;
+    height: 100vh;
+    background: white;
+    position: relative;
+    animation-name: changeBackground;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
   }
 
   @keyframes changeBackground {
