--- a/portf/templates/stack.html
+++ b/portf/templates/stack.html
@@ -25,6 +25,10 @@
                             <h5>ЛР 1</h5>
                         </a>
 
+                        <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
+                            <h5>ЛР 1</h5>
+                        </a>
+
                 </div>
             </div>
         </div>
