--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -84,20 +84,19 @@ p {
 }
 
 .works-item {
-  width: calc(33.33% - 10px);
-  margin-bottom: 20px;
+  width: calc(30% - 40px);
+  margin: 20px;
   box-sizing: border-box;
   background-color: rgb(200, 231, 193);
-  padding: 20px;
+  padding: 40px;
   border-radius: 10px;
-  box-shadow: 0 6 15px rgba(0, 0, 0, 0.1);
-  text-align: center; 
-  text-decoration: none; 
-  display: flex; 
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  text-decoration: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  
 }
 
 .works-item:hover{
