--- a/portf/templates/stack.html
+++ b/portf/templates/stack.html
@@ -18,6 +18,7 @@
 
                         <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
                             <h5>ЛР 1</h5>
+                            <img src="../../staticfiles/img/doc.png" alt="документ">
                         </a>
 
 
