--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,6 +88,7 @@ p {
   margin: 20px;
   box-sizing: border-box;
   background-color: rgb(200, 231, 193);
+  background-image: url("../img/doc.png");
   padding: 40px;
   border-radius: 10px;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
@@ -97,12 +98,21 @@ p {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  position: relative; 
 }
 
 .works-item:hover{
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
-  transform: translateY(-3px);
+  transform: translateY(-5px);
 }
+
+.works-item .text-container {
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  width: 100%;
+}
+
 .works-item img {
   max-width: 100%; 
 }
