--- a/portf/templates/stack.html
+++ b/portf/templates/stack.html
@@ -13,20 +13,28 @@
 
                     <div class="works-container">
                         <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                            <p>лр1</p>
+                            <div class="content">
+                                <p>лр1</p>
+                            </div>
                         </a>
 
                         <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                            <p>лр1</p>
+                            <div class="content">
+                                <p>лр1</p>
+                            </div>
                         </a>
 
 
                         <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                            <p>лр1</p>
+                            <div class="content">
+                                <p>лр1</p>
+                            </div>
                         </a>
 
                         <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                            <p>лр1</p>
+                            <div class="content">
+                                <p>лр1</p>
+                            </div>
                         </a>
 
                 </div>
