--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -9,7 +9,7 @@ p {
     background: white;
     position: relative;
     animation-name: changeBackground;
-    animation-duration: 10s;
+    animation-duration: 22s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
   }
@@ -18,12 +18,31 @@ p {
     0% {
       background-image: url('../img/background1.png');
     }
-    50% {
+    12.5% {
       background-image: url('../img/background2.png');
     }
-    100% {
+    25% {
       background-image: url('../img/background3.png');
     }
+    37.5% {
+      background-image: url('../img/background4.png');
+    }
+    50% {
+      background-image: url('../img/background5.png');
+    }
+    62.5% {
+      background-image: url('../img/background6.png');
+    }
+    75% {
+      background-image: url('../img/background7.png');
+    }
+    87.5% {
+      background-image: url('../img/background8.png');
+    }
+    100% {
+      background-image: url('../img/background9.png');
+    }
+
   }
   
   .container {
