--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -8,42 +8,47 @@ p {
     height: 100vh;
     background: white;
     position: relative;
+    overflow: hidden; 
     animation-name: changeBackground;
-    animation-duration: 22s;
+    animation-duration: 30s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
-  }
+}
 
-  @keyframes changeBackground {
-    0% {
+@keyframes changeBackground {
+  0% {
       background-image: url('../img/background1.png');
-    }
-    12.5% {
-      background-image: url('../img/background2.png');
-    }
-    25% {
-      background-image: url('../img/background3.png');
-    }
-    37.5% {
-      background-image: url('../img/background4.png');
-    }
-    50% {
-      background-image: url('../img/background5.png');
-    }
-    62.5% {
-      background-image: url('../img/background6.png');
-    }
-    75% {
-      background-image: url('../img/background7.png');
-    }
-    87.5% {
-      background-image: url('../img/background8.png');
-    }
-    100% {
-      background-image: url('../img/background9.png');
-    }
-
   }
+  12.5% {
+      background-image: url('../img/background2.png');
+  }
+  25% {
+      background-image: url('../img/background3.png');
+  }
+  37.5% {
+      background-image: url('../img/background4.png');
+  }
+  50% {
+      background-image: url('../img/background5.png');
+  }
+  62.5% {
+      background-image: url('../img/background6.png');
+  }
+  75% {
+      background-image: url('../img/background7.png');
+  }
+  87.5% {
+      background-image: url('../img/background8.png');
+  }
+  100% {
+      background-image: url('../img/background9.png');
+  }
+}
+
+body {
+    background-position: center center;
+    background-size: cover;
+}
   
   .container {
       height: 100%;
