--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -7,17 +7,12 @@
                 <div class="card-header text-center">
                     <h1> Суворов Роман </h1>
                     <p>Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс</p>
-                    <div class="">
-                        1) был создан проект с использованием django-admin <br>
-                        2) далее был настроен Django в файлах settings и связан с приложением Django <br>
-                        3) проект был связан с репозиторием GitHub для более удобного коммита  <br>
-                        4) далее был создан файл vercel.json для связи сайта с Vercel <br>
-                        5) GitHub был подключен к Vercel и практически автоматически задеплоен<br><br>
-
-                        <p>Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах</p>
-                    </div>
 
                     <h3>Ссылка на профили replit с выполненными работами:</h3>
+                        <a href="/explanation">
+                            <button class="btn btn-primary">пояснение</button>
+                        </a>
+
                         <a href="/prog">
                             <button class="btn btn-primary">ПРОГ4</button>
                         </a>
