--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -1,23 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="card box-shadow m-2 from-w">
-                <div class="card-header text-center">
-                    <h1> Суворов Роман </h1>
-                    <p>Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс</p>
+    <div class="card-header text-center">
+        <h1> Суворов Роман </h1>
+        <p>Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс</p>
+        <p>Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах</p>
 
-                    <h3>Ссылка на профили replit с выполненными работами:</h3>
-                        <a href="/explanation">
-                            <button class="btn btn-primary">пояснение</button>
-                        </a>
+        <h3>Ссылка на профили replit с выполненными работами:</h3>
+            <a href="/explanation">
+                <button class="btn btn-primary">пояснение</button>
+            </a>
 
-                        <a href="/prog">
-                            <button class="btn btn-primary">ПРОГ4</button>
-                        </a>
-                </div>
-            </div>
-        </div>
+            <a href="/prog">
+                <button class="btn btn-primary">ПРОГ4</button>
+            </a>
+            
+            <p>
+                <a href="https://t.me/webbbsalad">
+                    <button class="btn button">Telegram</button>
+                </a>
+            </p>
+
     </div>
+
 {% endblock %}
