--- a/portf/templates/base.html
+++ b/portf/templates/base.html
@@ -11,7 +11,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
     <body>
-        {% block content %}
-        {% endblock %}
+        <div class="container">
+            <div class="row">
+                <div class="card box-shadow m-2 from-w">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
     </body>
 </html>
