--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -13,13 +13,11 @@
 
             <a href="/prog">
                 <button class="btn btn-primary">ПРОГ4</button>
+            </a><br>
+
+            <a href="https://t.me/webbbsalad">
+                <button class="btn button-primary">Telegram</button>
             </a>
-            
-            <p>
-                <a href="https://t.me/webbbsalad">
-                    <button class="btn button">Telegram</button>
-                </a>
-            </p>
 
     </div>
 
