--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -16,7 +16,7 @@
             </a><br>
 
             <a href="https://t.me/webbbsalad">
-                <button class="btn button-primary">Telegram</button>
+                <button class="btn btn-primary">Telegram</button>
             </a>
 
     </div>
