--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -8,11 +8,15 @@
 
         <h3>Ссылка на профили replit с выполненными работами:</h3>
             <a href="/explanation">
-                <button class="btn btn-primary">пояснение</button>
+                <button class="btn btn-primary">Пояснение</button>
             </a>
 
             <a href="/prog">
                 <button class="btn btn-primary">ПРОГ4</button>
+            </a>
+            
+            <a href="/kp">
+                <button class="btn btn-primary">КП</button>
             </a><br><br>
 
             <a href="https://t.me/webbbsalad">
