--- a/portf/templates/kp.html
+++ b/portf/templates/kp.html
@@ -16,7 +16,7 @@
             <a href="https://github.com/webbsalad/suvorov" class="works-item">
                 <h5>ЛР2</h5>
             </a>
-
+        </div>
 
     </div>
 {% endblock %}
