--- a/portf/templates/prog.html
+++ b/portf/templates/prog.html
@@ -25,6 +25,7 @@
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
                 <h5>ЛР1</h5>
             </a>
+        </div>
 
 
     </div>
