--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,8 +108,10 @@ body {
 }
 
 .works-item {
-  width: 30%;
-  height: 30%;
+  flex-grow: 1;
+  width: calc(33.33% - 40px);
+  height: 0; 
+  padding-top: calc(33.33% - 40px); 
   margin: 20px;
   box-sizing: border-box;
   background-color: rgb(211, 228, 207);
@@ -120,10 +122,6 @@ body {
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
   text-decoration: none;
-  display: flex;
-  flex-direction: column; 
-  justify-content: flex-end; 
-  overflow: hidden;
   position: relative; 
 }
 
