--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,27 +103,26 @@ body {
 .works-container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row; 
   justify-content: space-between;
 }
 
 .works-item {
   flex-grow: 1;
-  width: calc(33.33% - 40px);
-  height: 0; 
-  padding-top: calc(33.33% - 40px); 
+  width: calc(33.33% - 40px); 
+  height: calc(33.33% - 40px); 
   margin: 20px;
   box-sizing: border-box;
   background-color: rgb(211, 228, 207);
   background-image: url("../img/doc.png");
   background-size: cover; 
-  padding: 40px;
+  padding: 40px; 
   border-radius: 10px;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
   text-decoration: none;
   position: relative; 
 }
+
 
 .content {
   color: rgb(0, 0, 0);  /
