--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
+
 {% block content %}
     <div class="card-header text-center">
         <h1> Суворов Роман </h1>
         <p>Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс</p>
         <p>Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах</p>
 
-        <h3>Ссылка на профили replit с выполненными работами:</h3>
+        <h3>{% trans "Ссылка на профили replit с выполненными работами:" %}</h3>
             <a href="/explanation">
                 <button class="btn btn-primary">Пояснение</button>
             </a>
