--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% load i18n %}
-
+<a href="{% url 'set_language' %}?language=ru">Русский</a> 
+<a href="{% url 'set_language' %}?language=en">English</a>
 {% block content %}
     <div class="card-header text-center">
         <h1> Суворов Роман </h1>
