--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -3,13 +3,13 @@
 {% load i18n %}
 {% block content %}
     <div class="card-header text-center">
-        <h1> Суворов Роман </h1>
-        <p>Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс</p>
-        <p>Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах</p>
+        <h1> {% trans "Суворов Роман" %} </h1>
+        <p>{% trans "Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс" %}</p>
+        <p>{% trans "Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах" %}</p>
 
         <h3>{% trans "Ссылка на профили replit с выполненными работами:" %}</h3>
             <a href="/explanation">
-                <button class="btn btn-primary">Пояснение</button>
+                <button class="btn btn-primary">{% trans "Пояснение" %}</button>
             </a>
 
             <a href="/prog">
