--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -14,11 +14,11 @@
             </a>
 
             <a href="/prog">
-                <button class="btn btn-primary">ПРОГ4</button>
+                <button class="btn btn-primary">{% trans "ПРОГ4" %}</button>
             </a>
             
             <a href="/kp">
-                <button class="btn btn-primary">КП</button>
+                <button class="btn btn-primary">{% trans "КП" %}</button>
             </a><br><br>
 
             <a href="https://t.me/webbbsalad">
