--- a/portf/templates/kp.html
+++ b/portf/templates/kp.html
@@ -1,20 +1,21 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
 {% block content %}
     <a href="/">
-        <button class="btn btn-primary">Назад</button>
+        <button class="btn btn-primary">{% trans "Назад" %}</button>
     </a>
     <div class="card-header text-center">
-        <h3> КП </h3>
+        <h3> {% trans "КП " %}</h3>
     </div>
 
         <div class="works-container">
             <a href="https://github.com/webbsalad/suvorov" class="works-item">
-                <h5>ЛР1</h5>
+                <h5>{% trans "ЛР1" %}</h5>
             </a>
 
             <a href="https://github.com/webbsalad/suvorov" class="works-item">
-                <h5>ЛР2</h5>
+                <h5>{% trans "ЛР2" %}</h5>
             </a>
         </div>
 
