--- a/portf/templates/prog.html
+++ b/portf/templates/prog.html
@@ -1,29 +1,30 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
 {% block content %}
     <a href="/">
-        <button class="btn btn-primary">Назад</button>
+        <button class="btn btn-primary">{% trans "Назад" %}</button>
     </a>
     <div class="card-header text-center">
-        <h3> ПРОГ4 </h3>
+        <h3> {% trans "ПРОГ4" %} </h3>
     </div>
 
         <div class="works-container">
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                <h5>ЛР1</h5>
+                <h5>{% trans "ЛР1" %}</h5>
             </a>
 
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                <h5>ЛР1</h5>
+                <h5>{% trans "ЛР1" %}</h5>
             </a>
 
 
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                <h5>ЛР1</h5>
+                <h5>{% trans "ЛР1" %}</h5>
             </a>
 
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                <h5>ЛР1</h5>
+                <h5>{% trans "ЛР1" %}</h5>
             </a>
         </div>
 
