--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -17,7 +17,7 @@
                 <button class="btn btn-primary">{% trans "ПРОГ4" %}</button>
             </a>
             
-            <a href="/kp">
+            <a href="/cw">
                 <button class="btn btn-primary">{% trans "КП" %}</button>
             </a><br><br>
 
