--- a/portf/templates/cw.html
+++ b/portf/templates/cw.html
@@ -11,11 +11,11 @@
 
         <div class="works-container">
             <a href="https://github.com/webbsalad/suvorov" class="works-item">
-                <h5>{% trans "ЛР1" %}</h5>
+                <h5>{% trans "ЛР"%}1</h5>
             </a>
 
             <a href="https://github.com/webbsalad/suvorov" class="works-item">
-                <h5>{% trans "ЛР2" %}</h5>
+                <h5>{% trans "ЛР" %}2</h5>
             </a>
         </div>
 
