--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -8,7 +8,7 @@
         <p>{% trans "Студент РГПУ им. Герцена, ИИТТО, ИВТ 2 курс" %}</p>
         <p>{% trans "Данное портфолио создано студентом РГПУ имени Герцена с целью размещения на нем информации о выполненных работах" %}</p>
 
-        <h3>{% trans "Ссылка на профили replit с выполненными работами:" %}</h3>
+        <h3>{% trans "Ссылки:" %}</h3>
             <a href="/explanation">
                 <button class="btn btn-primary">{% trans "Пояснение" %}</button>
             </a>
