--- a/portf/templates/prog.html
+++ b/portf/templates/prog.html
@@ -11,20 +11,20 @@
 
         <div class="works-container">
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                <h5>{% trans "ЛР1" %}</h5>
+                <h5>{% trans "ЛР" %}1</h5>
             </a>
 
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                <h5>{% trans "ЛР1" %}</h5>
+                <h5>{% trans "ЛР" %}1</h5>
             </a>
 
 
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                <h5>{% trans "ЛР1" %}</h5>
+                <h5>{% trans "ЛР" %}1</h5>
             </a>
 
             <a href="https://replit.com/@tot-kogho-siest/Progh4-lab1" class="works-item">
-                <h5>{% trans "ЛР1" %}</h5>
+                <h5>{% trans "ЛР" %}1</h5>
             </a>
         </div>
 
