--- a/portf/templates/base.html
+++ b/portf/templates/base.html
@@ -7,15 +7,15 @@
     <title>🐸Суворов Роман🐸</title>
     {% load static %}
     <link rel="icon" type="image/png" href="/static/img/logo.png">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
     <body>
         <a href="{% url 'set_language' %}?language=ru">
-            <button class="btn btn-primary">Русский</button>
+            <button class="btn btn-primary" onclick="highlightButton(this)">Русский</button>
         </a> 
         <a href="{% url 'set_language' %}?language=en">
-            <button class="btn btn-primary">English</button>
+            <button class="btn btn-primary" onclick="highlightButton(this)">English</button>
         </a>
         <div class="container">
             <div class="row">
@@ -27,3 +27,14 @@
         </div>
     </body>
 </html>
+
+
+
+<script>
+    function highlightButton(btn) {
+        document.querySelectorAll('.btn-primary').forEach(function(button) {
+            button.classList.remove('active');
+        });
+        btn.classList.add('active');
+    }
+</script>
