--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -17,6 +17,10 @@
                 <button class="btn btn-primary">{% trans "ПРОГ4" %}</button>
             </a>
             
+            <a href="/db">
+                <button class="btn btn-primary">{% trans "БД" %}</button>
+            </a>
+
             <a href="/cw">
                 <button class="btn btn-primary">{% trans "КП" %}</button>
             </a><br><br>
