--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -113,8 +113,8 @@ body {
 }
 
 .works-item {
-  flex-grow: 1;
-  width: calc(30%-10px);
+  width: 20vw;
+  height: 20vw;
   margin: 20px;
   background-color: rgb(211, 228, 207);
   background-image: url("../img/doc.png");
@@ -124,7 +124,6 @@ body {
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
   text-decoration: none;
-  justify-content: flex-end; 
   overflow: hidden;
   position: relative; 
 }
