--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,8 +113,8 @@ body {
 }
 
 .works-item {
-  width: 20vw;
-  height: 20vw;
+  width: max(5vw, 40px);
+  height: max(5vw, 40px);
   margin: 20px;
   background-color: rgb(211, 228, 207);
   background-image: url("../img/doc.png");
