--- a/portf/templates/index.html
+++ b/portf/templates/index.html
@@ -10,7 +10,7 @@
 
         <h3>{% trans "Ссылки:" %}</h3>
             <a href="/explanation">
-                <button class="btn btn-primary">{% trans "Пояснение" %}</button>
+                <button class="btn btn-primary">{% trans "Обо мне" %}</button>
             </a>
 
             <a href="/prog">
