--- a/portf/templates/explanation.html
+++ b/portf/templates/explanation.html
@@ -6,30 +6,12 @@
         <button class="btn btn-primary">{% trans "Назад" %}</button>
     </a>
     <div class="card-header text-center">
-        <h3> {% trans "Создание Сайта" %} </h3>
+        <h3> {% trans "Суворов Роман" %} </h3>
     </div>
-    <div class="">
-        {% trans "1) был создан проект с использованием django-admin " %}<br>
-        {% trans "2) далее был настроен Django в файлах settings и связан с приложением Django " %}<br>
-        {% trans "3) проект был связан с репозиторием GitHub для более удобного коммита" %}  <br>
-        {% trans "4) далее был создан файл vercel.json для связи сайта с Vercel" %} <br>
-           Vercel.json:
-        <pre>
-            {
-                "builds": [{
-                    "src": "suvorov/wsgi.py",
-                    "use": "@vercel/python",
-                    "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-                }],
-                "routes": [
-                    {
-                        "src": "/(.*)",
-                        "dest": "suvorov/wsgi.py"
-                    }
-                ]
-            }
-            </pre><br>
-        {% trans "5) GitHub был подключен к Vercel и практически автоматически задеплоен" %}<br><br>
+    <div>
+        {% trans "Приветствую! Я студент РГПУ имени Герцена обучаюсь на направлении Информатика вычислительная техника Технологии разработки програмного обеспечения на данном сайте собраны мои работы по направлениям: програмирование, базы данных, компьютерный практикум" %}<br>
+
     </div>
+        
                 
 {% endblock %}
