--- a/portf/templates/explanation.html
+++ b/portf/templates/explanation.html
@@ -8,7 +8,7 @@
     <div class="card-header text-center">
         <h3> {% trans "Суворов Роман" %} </h3>
     </div>
-    <div>
+    <div class="text-center">
         {% trans "Приветствую! Я студент РГПУ имени Герцена обучаюсь на направлении Информатика вычислительная техника Технологии разработки програмного обеспечения на данном сайте собраны мои работы по направлениям: програмирование, базы данных, компьютерный практикум" %}<br>
 
     </div>
