--- a/portf/templates/explanation.html
+++ b/portf/templates/explanation.html
@@ -9,8 +9,12 @@
         <h3> {% trans "Суворов Роман" %} </h3>
     </div>
     <div class="text-center">
-        {% trans "Приветствую! Я студент РГПУ имени Герцена обучаюсь на направлении Информатика вычислительная техника Технологии разработки програмного обеспечения на данном сайте собраны мои работы по направлениям: програмирование, базы данных, компьютерный практикум" %}<br>
-
+        <div class="photo">
+            <img src="/static/img/face.png" alt="Фото">
+        </div>
+        <div class="content-left">
+            {% trans "Приветствую! Я студент РГПУ имени Герцена обучаюсь на направлении Информатика вычислительная техника Технологии разработки програмного обеспечения на данном сайте собраны мои работы по направлениям: програмирование, базы данных, компьютерный практикум" %}<br>
+        </div>
     </div>
         
                 
