--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -130,6 +130,17 @@ body {
 .content {
   color: rgb(0, 0, 0);  /
 }
+.photo {
+  width: 50%; 
+}
+
+.photo img {
+  width: 100%; 
+}
+
+.content-left {
+  width: 50%; 
+}
 
 .works-item:hover{
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.2);
