--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,15 +131,20 @@ body {
   color: rgb(0, 0, 0);  /
 }
 .photo {
-  width: 50%; 
+  width: 30%; /* Фото занимает максимум 30% экрана */
+  max-width: 30%; /* Максимальная ширина фото 30% */
 }
 
 .photo img {
-  width: 100%; 
+  width: 100%; /* Фото занимает всю доступную ширину родительского элемента */
+  height: auto; /* Поддерживает соотношение сторон */
+  max-width: 100%; /* Максимальная ширина фото 100% */
+  display: block; /* Убирает пустые пространства под изображением */
 }
 
 .content-left {
-  width: 50%; 
+  width: 70%; /* Контент занимает оставшиеся 70% экрана */
+  padding: 20px; /* Добавим немного отступа для красоты */
 }
 
 .works-item:hover{
