--- a/portf/templates/db.html
+++ b/portf/templates/db.html
@@ -10,9 +10,11 @@
     </div>
 
         <div class="works-container">
-            <a href="#" class="works-item">
+            <a href="https://docs.google.com/document/d/1YmEImi_ctH68IJHKQuSiiSDiWNiOdcc_Y5v0AXMq8YM/edit?usp=sharing" class="works-item">
                 <h5>{% trans "ЛР"%}1</h5>
             </a>
+
+            
 
         </div>
 
