--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -113,8 +113,8 @@ body {
 
 
 .works-item {
-  width: min(50%, 200px);
-  height: min(50%, 200px);
+  width: min(10vw, 70px);
+  height: min(10vw, 70px);
   margin: 10px;
   background-color: rgb(211, 228, 207);
   background-image: url("../img/doc.png");
